# sandpile

./: .gitignore  CMakeLists.txt  README.md  input.tsv  main.cpp
.cmake/api/v1/reply/: cache-v2-37d695ffbe852e1bcda9.json  cmakeFiles-v1-4812435c37f37a153163.json  codemodel-v2-3d8c27d7151c8e628418.json  index-2024-10-19T16-06-01-0301.json  target-SandPile-Release-261555ea3638309b66d3.json
include/: SandBox.h  bmp.h  images.h  parser.h
src/: SandBox.cpp  bmp.cpp  images.cpp  parser.cpp
